# spbu-amcs

./: start_problems.cpp
CS/sem 1/: big_int.cpp  big_int.h  chinese_remainder_theorem.cpp  extended_euclid.cpp  extended_euclid.h  legendre_euler.cpp  legendre_euler.h  linear_diophantine_equations.cpp  mod_pow.cpp  mod_pow.h  nfib_mod.cpp  quadratic_congruence.cpp  start_problems.cpp
CS/sem 2/: polynomials.cpp  str_input.cpp  str_input.h
CS/sem 2/dfa/: CMakeLists.txt
CS/sem 2/dfa/dfa/: CMakeLists.txt  dfa.cpp  dfa.h  graph.cpp  graph.h  list.cpp  list.h  main.cpp
CS/sem 2/graph/: CMakeLists.txt
CS/sem 2/graph/graph/: 2_sat_solver.cpp  2_sat_solver.h  CMakeLists.txt  bipartity_check.cpp  bipartity_check.h  file_input.cpp  file_input.h  graph.cpp  graph.h  list.cpp  list.h  main.cpp  out_graph.txt  scc_partition.cpp  scc_partition.h  str_input.cpp  str_input.h  test_graph.txt  test_graph_1.txt  topological_sort.cpp  topological_sort.h
CS/sem 2/polynomials/: polynomials.cpp  polynomials.h  str_input.cpp
CS/sem 2/rpn/: CMakeLists.txt  reverse_polish_notation.cpp
CS/sem 2/trees/: stern_brocot_tree.cpp  tree_sort.cpp
